--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>S0laire - Portfolio</title>
+		<title>Sohlaro - Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Take a seat</h1>
-								<p>Portfolio of Developer <a href="https://github.com/sohlaro">S0laire</a> featuring<br />
+								<p>Portfolio of Developer <a href="https://github.com/sohlaro">sohlaro</a> featuring<br />
 								several projects from <a href="https://github.com/sohlaro?tab=repositories">these repositories</a> </p>
 							</div>
 						</div>
