--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<!--
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								-->
-								<p>GitHub: https://github.com/sohlaro</p>
+								<p>GitHub: <a href="https://github.com/sohlaro">https://github.com/sohlaro</p>
 								<p>E-Mail: sohlaro@protonmail.com</p>
 							</article>
 
