--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								
 								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
 								-->
-								<p>Nur für dich Beckie, meinen treuen Web-Stalker</p>
+								<p>soon</p>
 							</article>
 
 						<!-- About_me -->
